# doklin

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  sample.md  vite.config.ts
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: development.md  tabs-drafts-followups.md
scripts/: build-stt.sh  build-web.mjs  bundle-worker.mjs  install.sh
share-worker/: README.md  wrangler.toml.example
share-worker/src/: favicons.js  index.js  webAssets.js  webComments.js
share-worker/test/: run.mjs
src/: AccessCodes.tsx  App.css  App.tsx  BackendTeardown.tsx  Backends.tsx  CloudSync.tsx  CommentsRail.tsx  ConnectBackend.tsx  DictationHud.tsx  DictationInspector.tsx  DictationSetup.tsx  Editor.tsx  HistoryPanel.tsx  HtmlView.tsx  MermaidModal.tsx  Select.tsx  ShareFolder.tsx  ShareMenu.tsx  ShareSetup.tsx  SharedPages.tsx  Sidebar.tsx  TabBar.tsx  WorkerUpdate.tsx  criticMark.ts  criticMarkup.ts  criticPlugin.ts  dictation.ts  ghostText.ts  htmlBridge.ts  htmlComments.ts  inlineCodeNewlines.ts  mermaid.ts  mermaidTheme.ts  polishRevert.ts  prompts.ts  searchPlugin.ts  share.ts  sync.ts  tableResize.ts  updater.ts  (+1 more)
src-tauri/: .gitignore  Cargo.toml  Doklin.entitlements  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dictation.rs  lib.rs  main.rs  sync.rs
src-tauri/stt-helper/: Package.resolved  Package.swift
src-tauri/stt-helper/Sources/doklin-stt/: AudioCapture.swift  Corrector.swift  Emit.swift  Transcriber.swift  main.swift
verify-harness/: .gitignore  drive-inline-code.mjs  drive-mermaid-web.mjs  drive-mermaid.mjs  drive-scroll-blink.mjs  drive-split.mjs  drive-web.mjs  drive.mjs  harness.tsx  index.html  inline-code.html  inline-code.tsx  merge.test.mjs  mermaid.html  mermaid.tsx  package.json  scroll-blink.html  scroll-blink.tsx  serve-worker.mjs  shot-mermaid.mjs  split.html  split.tsx  table-resize.html  table-resize.tsx
web/: WebApp.tsx  api.ts  main.tsx  mermaid-entry.ts  web.css
