[package]
name = "doklin"
version = "0.1.38"
description = "Markdown editor"
authors = ["Sherin"]
edition = "2021"

[lib]
name = "doklin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
# Dictation sidecar request/response plumbing (tauri already ships tokio; the
# direct dep is for oneshot + timeout in src/dictation.rs).
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
notify = "6"
notify-debouncer-full = "0.3"
# Cloud sync engine (src/sync.rs): HTTP to the user's share worker, content
# hashing, three-way merge for concurrent edits, random ids, and local-time
# labels on conflict copies.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
diffy = "0.4"
getrandom = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"

# In-app auto-updater (desktop only, per Tauri's plugin guidance).
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

# macOS-only: trashing files via NSFileManager (see trash_file in lib.rs). This
# app currently targets macOS only — see the README. If we ever go cross-platform,
# grep for "macOS-only" to find every spot that needs a portable fallback.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSError",
    "NSFileManager",
    "NSString",
    "NSURL",
] }
